fjord-compiler/test/errors/parametric-polymorphism/InconsistentReturn.fj
module errors.parametricPolymorphism.InconsistentReturn

id : a => a -> a
id x =
  5
